--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ beautifulsoup4==4.12.3
 requests==2.31.0
 python-dotenv==1.0.0
 langchain==0.1.12
-langchain-community==0.0.27
+langchain-community>=0.0.28
 langchain-core==0.1.31
 chromadb==0.4.24
-pydantic==1.10.13
-langsmith==0.0.69
+pydantic>=2.0.0
+langsmith>=0.1.17
 typing-extensions==4.8.0
 numpy==1.26.4 
